Solution of bugs

--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
     <div class="container">
         <nav class="nav">
             <ul class="nav__list">
-                <li><a class="links" href="#"><img class="links__img" src="/images/buttons/inicio.png" alt="Home button" /></a></li>
-                <li><a class="links" href="#"><img class="links__img" src="/images/buttons/niveles.png" alt="Levels" /></a></li>
-                <li><a class="links" href="#"><img class="links__img" src="/images/buttons/filiales.png" alt="Subsidiaries" /></a></li>
-                <li><a class="links" href="#"><img class="links__img" src="/images/buttons/fines.png" alt="Purpose" /></a></li>
-                <li><a class="links" href="#"><img class="links__img" src="/images/buttons/quienes-somos.png" alt="Who we are" /></a></li>
-                <li><a class="links" href="#"><img class="links__img" src="/images/buttons/inscripcion.png" alt="Inscription" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/inicio.png" alt="Home button" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/niveles.png" alt="Levels" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/filiales.png" alt="Subsidiaries" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/fines.png" alt="Purpose" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/quienes-somos.png" alt="Who we are" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/inscripcion.png" alt="Inscription" /></a></li>
             </ul>
             <hr>
         </nav>
         <header class="top">
             <p class="top__welcome">Bienvenido</p>
             <div class="block-image">
-                <img class="block-image__img" src="/images/logos/trescolegios.png" alt="The three school brands"/>
+                <img class="block-image__img" src="images/logos/trescolegios.png" alt="The three school brands"/>
             </div>
         </header>
         <div class="content">
             <aside class="other">
-                <div class="blocks"><img src="/images/people/wall.jpg" alt="Future"/>
+                <div class="blocks"><img src="images/people/wall.jpg" alt="Future"/>
                     <p class="blocks-text">Construyendo un país mejor</p>
                 </div>
-                <div class="blocks"><img src="/images/logos/paraguay.png" alt="Paraguay"/>
+                <div class="blocks"><img src="images/logos/paraguay.png" alt="Paraguay"/>
                     <p class="blocks-text">Paraguay</p>
                 </div>
-                <div class="blocks"><img src="/images/logos/200.png" alt="Bicentenary"/>
+                <div class="blocks"><img src="images/logos/200.png" alt="Bicentenary"/>
                     <p class="blocks-text">Bicentenario de la república</p>
                 </div>
             </aside>
             <section class="main-information">
                 <article class="contents-section">
-                    <img class="image-content" src="/images/people/boys.jpg" alt="Students" />
+                    <img class="image-content" src="images/people/boys.jpg" alt="Students" />
                     <h1 class="title">ECOESCUELA</h1>
                     <p class="title__description">Nivel inicial, Jardín Pre-Escolar <br>
                         Participa en actividades artísticas, culturales y deportivas. Programa oficial con el idioma
@@ -50,7 +50,7 @@
                     <hr>
                 </article>
                 <article class="contents-section">
-                    <img class="image-content" src="/images/people/girl.jpg" alt="Student" />
+                    <img class="image-content" src="images/people/girl.jpg" alt="Student" />
                     <h1 class="title">ECOCOLEGIO</h1>
                     <p class="title__description">Educación Escolar Básica <br>
                         Conocimientos y actitudes para un mundo competitivo con el programa oficial del MEC.
