Fix the phrase h2 in index

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <hr>
                 </article>
             </section>
+            <h2 class="phrase">Un país mejor sólo se construye con personas mejor preparadas</h2>
         </div>
         <footer class="footer">
-            <h2 class="title-footer">Un país mejor sólo se construye con personas mejor preparadas</h2>
             <p class="copyright">© Derechos reservados - 2011</p>
         </footer>
     </div>
