Agregando otro nav

--- a/niveles.html
+++ b/niveles.html
@@ -18,6 +18,18 @@
             </ul>
             <hr>
         </nav>
+		
+		<nav class="nav">
+            <ul class="nav__list">
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/inicio.png" alt="Home button" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/niveles.png" alt="Levels" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/filiales.png" alt="Subsidiaries" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/fines.png" alt="Purpose" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/quienes-somos.png" alt="Who we are" /></a></li>
+                <li><a class="links" href="#"><img class="links__img" src="images/buttons/inscripcion.png" alt="Inscription" /></a></li>
+            </ul>
+            <hr>
+        </nav>
 
         <header class="top">
             <p class="top__welcome">Niveles Educativos</p>
