--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <nav class="nav">
             <ul class="nav__list">
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/inicio.png" alt="Home button" /></a></li>
+				<li><a class="links" href="#"><img class="links__img" src="images/buttons/inicio.png" alt="Home button" /></a></li>
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/niveles.png" alt="Levels" /></a></li>
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/filiales.png" alt="Subsidiaries" /></a></li>
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/fines.png" alt="Purpose" /></a></li>
