--- a/niveles.html
+++ b/niveles.html
@@ -27,6 +27,7 @@
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/fines.png" alt="Purpose" /></a></li>
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/quienes-somos.png" alt="Who we are" /></a></li>
                 <li><a class="links" href="#"><img class="links__img" src="images/buttons/inscripcion.png" alt="Inscription" /></a></li>
+				<li><a class="links" href="#"><img class="links__img" src="images/buttons/inscripcion.png" alt="Inscription" /></a></li>
             </ul>
             <hr>
         </nav>
