Nuevas imágenes [iss53]

--- a/niveles.html
+++ b/niveles.html
@@ -36,6 +36,7 @@
             <p class="top__welcome">Niveles Educativos</p>
             <div class="block-image">
                 <img class="block-image__img" src="images/logos/trescolegios.png" alt="The three school brands"/>
+				<img class="block-image__img" src="images/logos/trescolegios.png" alt="The three school brands"/>
             </div>
         </header>
 
