Se agregó un 707

--- a/niveles.html
+++ b/niveles.html
@@ -73,7 +73,7 @@
                 </article>
                 <article class="contents-section">
                     <pre class="contents-section__text">
-                        EDUCACIÓN ESCOLAR BÁSICA 
+                        EDUCACIÓN ESCOLAR BÁSICA 707
                         CONOCIMIENTOS Y ACTITUDES PARA UN MUNDO MUY COMPETITIVO
                         Programa oficial del MEC 
                         Inglés y Portugués separado en niveles
