Nuevo idioma: El esperanto

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1 class="title">ECOESCUELA</h1>
                     <p class="title__description">Nivel inicial, Jardín Pre-Escolar <br>
                         Participa en actividades artísticas, culturales y deportivas. Programa oficial con el idioma
-                        español y guaraní, más inglés y portugués. Orientación hacia el trabajo en equipo mediante
+                        español y guaraní, más inglés, portugués y esperanto. Orientación hacia el trabajo en equipo mediante
                         juegos y activiades culturales, artísticas y deportivas. Fomento de la cultura ambientalista
                         mediante nociones elementales de biología, ecología y contacto con la naturaleza.
                     </p>
