Un error en Educativa

--- a/niveles.html
+++ b/niveles.html
@@ -68,7 +68,7 @@
 
                         Dieta balanceada como merienda
 
-                        Aprendizaje de Informática educativa
+                        Aprendizaje de Informática Educativa
                     </pre>
                 </article>
                 <article class="contents-section">
