Nuevo botón para la web

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                         Conocimientos y actitudes para un mundo competitivo con el programa oficial del MEC.
                     </p>
                     <button class="button">Leer más...</button>
+					<button class="button">Leer un poco más...</button>
                     <hr>
                 </article>
                 <article class="contents-section">
