Solución a una oración

--- a/niveles.html
+++ b/niveles.html
@@ -86,7 +86,7 @@
                         Participa de Campamentos
                         Participa de eventos internacionales de interés estudiantil
                         Los programas educativos incluyen investigación y elaboración de trabajos prácticos en la computadora de estudio
-                        Realiza visita a lugares históricos y de importancia nacional
+                        Realiza la visita a los lugares históricos y de importancia nacional
                         Aprende dibujo, pintura y desarrolla sus conocimientos en Ciencias de la Comunicación escribiendo poesías, gacetillas y guiones para teatro utilizando los idiomas estudiados... 
                     </pre>
                 </article>             
