Agregamos un guión

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section class="main-information">
                 <article class="contents-section">
                     <img class="image-content" src="images/people/boys.jpg" alt="Students" />
-                    <h1 class="title">ECOESCUELA</h1>
+                    <h1 class="title">ECO-ESCUELA</h1>
                     <p class="title__description">Nivel inicial, Jardín Pre-Escolar <br>
                         Participa en actividades artísticas, culturales y deportivas. Programa oficial con el idioma
                         español y guaraní, más inglés, portugués y esperanto. Orientación hacia el trabajo en equipo mediante
