--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Un sitio web simple y con malas prácticas para la UTCD">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+  	<meta http-equiv="X-UA-Compatible" content="IE=7">
+  	<meta name="keywords" content="UTCD, ECOCOLEGIO, utcd, ecocolegio">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/content_index.css">
