Update false Copyright index.html

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <h2 class="phrase">Un país mejor sólo se construye con personas mejor preparadas</h2>
         </div>
         <footer class="footer">
-            <p class="copyright">© Derechos reservados - 2020</p>
+		<!--JUST IN TEST-->
+		<p class="copyright">© Derechos reservados - 2023</p>
         </footer>
     </div>
 </body>
